updated the date form and allowed videos to display

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@ html{
 h3{
   padding: 0 2em;
 }
+
+iframe{
+  display: inline;
+  
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
